proc-macros/tests/ui/incorrect/sub/sub_empty_attr.stderr
error: unexpected end of input, `#[subscription]` is missing `name` argument
 --> $DIR/sub_empty_attr.rs:6:2
  |
6 |     #[subscription()]
  |     ^^^^^^^^^^^^^^^^^
