proc-macros/tests/ui/incorrect/sub/sub_empty_attr.rs
use jsonrpsee::proc_macros::rpc;

// Missing all the mandatory fields.
#[rpc(client, server)]
pub trait SubEmptyAttr {
	#[subscription()]
	async fn sub(&self) -> jsonrpsee::core::SubscriptionResult;
}

fn main() {}
